# ToDo

./: LICENSE  bd.dump.sql  bd.json  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
authapp/: models.py  serializers.py  tests.py  views.py
authapp/management/commands/: createuser.py
authapp/migrations/: 0002_alter_customuser_managers.py
backend/: Dockerfile  requirements.txt
backend/authapp/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
backend/authapp/fixtures/: 001.json
backend/authapp/migrations/: 0001_initial.py
backend/config/: schema.py  settings.py  urls.py
backend/testAPI/: tests_project.py  tests_users.py
backend/todoapp/: apps.py  filters.py  models.py  views.py
backend/todoapp/migrations/: 0002_alter_project_project_team.py
config/: schema.py  settings.py  urls.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: Auth.js  EditProject.js  Footer.js  Home.js  Menu.js  Project.js  ProjectDetail.js  ProjectForm.js  ProjectList.js  ToDo.js  ToDoForm.js  ToDoList.js  Users.js  not-found.js
frontend/src/core/: actions.js  consts.js  interceptor.js
nginx/: nginx.conf
testAPI/: conftest.py  tests_project.py  tests_users.py
todoapp/: conftest.py  filters.py  models.py  serializers.py  views.py
todoapp/migrations/: 0001_initial.py
